--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "AOEmedia/Menta",
+    "name": "aoemedia/menta",
     "type": "library",
     "description": "Selenium 2 Testing Framework (for PHPUnit)",
     "keywords": ["selenium", "webdriver", "phpunit", "browser"],
