--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "instaclick/php-webdriver": "dev-master"
     },
     "autoload": {
         "psr-0": {
