Menta is now full PSR-2 compatible --- rewritten the demo testcases TODO: printerClass in phpunit.xml not work with namespace namespace prefix core php classes (re)create ConfigurationInterface refactor forgotten classnames

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "instaclick/php-webdriver": "dev-master"
+        "instaclick/php-webdriver": "dev-master",
+        "phpunit/phpunit": "*@stable"
     },
     "autoload": {
         "psr-0": {
