--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "instaclick/php-webdriver": "dev-master"
+        "instaclick/php-webdriver": "1.4.1"
     },
     "autoload": {
         "psr-0": {
