--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "0x46616c6b/menta",
+    "name": "queo-composer/menta",
     "type": "library",
     "description": "Selenium 2 Testing Framework (for PHPUnit)",
     "keywords": ["selenium", "webdriver", "phpunit", "browser"],
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "instaclick/php-webdriver": "dev-master",
+        "instaclick/php-webdriver": "1.4.1",
         "phpunit/phpunit": "*@stable"
     },
     "autoload": {
